# yolo_trt_pose

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: common.hpp  yolo_v8_pose.h
src/: yolo_v8_pose.cc
